kubernetes/crawler-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crawler
  labels:
    app: parser
    component: crawler
spec:
  replicas: 1
  selector:
    matchLabels:
      app: parser
      component: crawler
  template:
    metadata:
      name: crawler-pod
      labels:
        app: parser
        component: crawler
    spec:
      containers:
        - image: devopstank/crawler:latest
          name: crawler
          imagePullPolicy: IfNotPresent
