kubernetes/rabbitmq-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq
  labels:
    app: parser
    component: rabbitmq
    rabbitmq: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: parser
      component: rabbitmq
  template:
    metadata:
      name: rabbitmq
      labels:
        app: parser
        component: rabbitmq
        rabbitmq: "true"
    spec:
      containers:
        - image: bitnami/rabbitmq:latest
          name: rabbitmq
          imagePullPolicy: IfNotPresent
