kubernetes/crawler-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: crawler
  labels:
    app: parser
    component: crawler
spec:
  selector:
    app: parser
    component: crawler
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
