kubernetes/crawler-ui-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: crawler-ui
  labels:
    app: parser
    component: crawler-ui
spec:
  selector:
    app: parser
    component: crawler-ui
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
