kubernetes/mongodb-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  labels:
    app: parser
    component: mongodb
spec:
  ports:
    - port: 27017
      protocol: TCP
      targetPort: 27017
  selector:
    app: parser
    component: mongodb
