kubernetes/rabbitmq-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
  labels:
    app: parser
    component: rabbitmq
spec:
  ports:
    - name: admin
      protocol: TCP
      port: 15672
      targetPort: 15672
    - name: http
      protocol: TCP
      port: 5672
      targetPort: 5672
  selector:
    app: parser
    component: rabbitmq
